kubernetes/apps/default/home-assistant/app/svc.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.30.1-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.30.1-standalone-strict/endpointslice-discovery-v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant-1
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "${HA_GREEN_ADDRESS}"
